--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.fontFamily": "Donk Mono"
+    "editor.fontFamily": "Dank Mono, Consolas, 'Courier New', monospace",
+    "editor.tabSize": 3
 }
